# ERC-20-Toy-Blockchain-with-Rust

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: block.rs  lib.rs  network.rs  node.rs  state.rs  user.rs  wallet.rs
core/src/consensus/: mod.rs  pow.rs
src/: block.rs  main.rs  network.rs  user.rs
