[workspace]
members = ["core", "cli"]

[workspace.dependencies]
hex = "0.4"
rand = "0.8"
secp256k1 = { version = "0.29", features = ["rand-std"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
